styles.css
/* ... */
/* Typography */
body {
    scroll-behavior: smooth;
    color: var(--text-color);
}

body.no-scroll {
    overflow: hidden;
}

a {
    display: inline-block;
    color: var(--accent-color);
    text-decoration: none;
    transition: color var(--clicked-feedback-time) ease, transform var(--clicked-feedback-time) ease;
    /* Smooth transition */
}

a:active {
    transform: scale(0.93);
    color: var(--accent-color-bright);
    /* Scale down to 95% on press */
}

h2 {
    font-size: 3rem;
    text-align: center;
    margin-bottom: 1rem;
    background: var(--linear-gradient-text-primary);
}

h3 {
    font-size: 1.5rem;
}


.teacher-heading,
.gallery-heading {
    font-size: 1.5rem;
    font-weight: bold;
    text-align: center;
    margin-top: 2rem;
    margin-bottom: 1rem;
}

#cta {
    cursor: pointer;
    user-select: none;
    /* transition: background-color var(--clicked-feedback-time) ease, transform var(--clicked-feedback-time) ease; */
}

#cta:active {
    background-color: var(--primary-color);
    transform: scale(0.93);
}


.bigger-text {
    font-size: larger;
}


.smaller-text {
    font-size: smaller;
}

/* Container for max-width consistency */
.container-full {
    display: flex;
    flex-direction: column;
    margin-top: 4.5rem;
    /* 0.5rem(navbar top)+0.5rem(below navbar)+0.5rem(bottom view)+ 3rem(navbar) + 0.2rem padding-block*/
    min-height: calc(100vh - 5rem);
    max-width: var(--viewport-width-desktop);
    position: relative;
    margin-inline: auto;
    border-radius: var(--border-radius);
    padding: 1rem;
    overflow: hidden;
}

/* Simplified navbar styles */
.navbar {
    transition: box-shadow var(--transition-duration) ease;
}

.navbar.scrolled {
    box-shadow: var(--box-shadow-navbar);
}


.navbar-overlay {
    display: none;
    position: fixed;
    inset: 0;
    background: rgba(0, 0, 0, 0.5);
    z-index: -1;
    pointer-events: none;
}

.navbar-overlay.show {
    display: block;
    pointer-events: auto;
    backdrop-filter: blur(2px);
    z-index: 99;
}

#logo-header {
    user-select: none;
    transition: transform var(--clicked-feedback-time) ease;
}

#logo-header:active {
    transform: scale(0.85);
}

#logo-header img {
    user-select: none;
    cursor: pointer;
}


.nav-links a {
    transition: color var(--transition-duration) ease;
    user-select: none;
    transition: color var(--clicked-feedback-time) ease, transform var(--clicked-feedback-time) ease;
}

.nav-links a:active {
    color: var(--accent-color-bright);
    transform: scale(0.93);
}

.nav-toggle {
    user-select: none;
    justify-content: space-between;
    flex-direction: column;
}


.nav-svg {
    transition: transform var(--transition-duration) ease;
}

.nav-toggle.expanded .nav-svg {
    transform: rotate(45deg);
}

.nav-svg-line {
    transition: all var(--transition-duration) ease;
}

.nav-toggle.expanded .nav-svg-line {
    stroke-dasharray: 60 105 60 300;
    stroke-dashoffset: -90;
}

.image-placeholder {
    position: relative;
    width: 100%;
    padding-bottom: 56.25%;
    /* Maintain aspect ratio */
    border-radius: var(--border-radius);
    overflow: hidden;
    background-color: rgb(12, 12, 12);
    text-align: center;

}

.image-placeholder::before {
    content: attr(aria-label);
    position: absolute;
    inset: 0;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.image-placeholder img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
}


.lazy-load {
    opacity: 0;
    transition: opacity var(--transition-duration-fast) ease-in;
}

.lazy-load.loaded {
    opacity: 1;
}

.teacher .image-placeholder {
    padding-bottom: 100%;
    border-radius: 50%;
}


.contact-locations .image-placeholder {
    padding-bottom: 63%;
}

.gallery-container .image-placeholder {
    padding-bottom: 58%;
}

.gallery-container lite-youtube .image-placeholder {
    margin-block: 0.2rem;
    padding-bottom: 56.25%;
}

lite-youtube img {
    height: 100%;
}

.teacher .lazy-load,
.style-card .lazy-load {
    aspect-ratio: 1/1;
}

.style-card .image-placeholder {
    padding-bottom: 100%;
    border-radius: 25%;
}


.teacher .image-placeholder::before {
    border-radius: 50%;
}


.parallax-img {
    will-change: transform, opacity;
}



.floating-contact-button:active {
    transform: scale(0.93);
    /* Scale down on press */
    background-color: var(--accent-color-bright);
}


.contact-icon {
    transition: transform var(--transition-duration) ease;
}

.contact-menu a {
    transform: translateY(300%);
    transition: transform 0.15s ease-out, opacity 0.15s ease-out;
}


/* Open state styles */
.floating-contact-button.open .contact-icon {
    transform: rotate(180deg) translateY(-0.1rem);
}

.floating-contact-button.open .contact-menu-container {
    pointer-events: auto;
}

.floating-contact-button.open .contact-menu a {
    opacity: 1;
    transform: translateY(0);
}

/* Staggered animation with CSS only */
.floating-contact-button.open .contact-menu li:nth-child(1) a {
    transition-delay: 0.1s;

}

.floating-contact-button.open .contact-menu li:nth-child(2) a {
    transition-delay: 0.05s;
}

.floating-contact-button.open .contact-menu li:nth-child(3) a {
    transition-delay: 0s;
}

.spacer {
    flex-grow: 1;
}

.styles-container {
    display: flex;
    align-items: flex-start;
    justify-content: space-around;
    border-radius: var(--border-radius);
    gap: 1rem;
    flex-grow: 1;
}

.styles-cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    gap: 2rem;
}
/* ... */

